# clienv

./: .env  Cargo.toml  README.md
src/: config.rs  config_test.rs  helpers.rs  helpers_test.rs  lib.rs  main.rs  manager.rs  manager_test.rs
src/tests/: cli.rs
tests/: cli_integration_test.rs
ts/: .env.dev  .npmignore  CONTRIBUTE.md  LICENSE.md  PRD.md  README.md  package-lock.json  package.json  rollup.config.js
ts/lib/: constants.ts  convert.ts  help.ts  index.ts  log.ts  sample.ts  template.ts
ts/lib/chain/: commands.ts  encryption.ts  file.ts  index.ts
ts/lib/crypt/: index.ts
ts/src/: index.ts  utils.ts
ts/src/commands/convert/: convert.ts
ts/src/commands/generate/: sample.ts
ts/src/commands/init/: index.ts
ts/src/commands/log/: log.ts
ts/src/commands/share/: share.ts
ts/src/commands/validate/: file.ts  helpers.ts  index.ts  logger.ts  questions.ts
ts/src/commands/view/: index.ts
ts/src/commands/wallet/: helpers.ts
ts/src/common/: app.ts  file.ts
ts/src/config/: .env.development  constants.ts  development.json
ts/src/crypto/: encryption.ts
ts/tests/: cli.test.ts  convert.test.ts  crypt.test.ts  integration.test.ts  log.test.ts  sample.test.ts
