[package]
name = "clienv"
version = "0.1.0"
authors = ["The Lazy <francis.igbiriki@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "a tool to manage your env variables"
readme = "README.md"
homepage = "https://clienv.dev"
repository = "https://github.com/igmrrf/clienv"
keywords = ["cli", "env", "manage", "track", "encrypt"]
categories = ["command-line-utilities", "virtualization"]
edition = "2024"

[dependencies]
clap = { version = "4.5.31", features = ["derive"] }
clap-verbosity-flag = "3.0.2"
log = "0.4.26"
anyhow = "1.0.97"
serde={version = "1.0", features = ["derive"]}
serde_json = "1.0.140"
aes-gcm = "0.10.3"
base64 = "0.22.1"
dotenv = "0.15.0"
confy = "0.6.1"
indicatif = "0.17.11"
lazy_static = "1.5.0"
tempfile = "3.19.0"


[dev-dependencies]
assert_cmd = "2.0.16"
assert_fs = "1.1.2"
predicates = "3.1.3"
